discussion/kv_engine/125280/125280_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Change PrivilegeAccess from enum to class

The intention behind this change is to allow for further detailed
failure states to be added in a second patch. If we had a new failure
values, code like ...

   if (state == PrivilegeAccess::Fail) {
       // Oh no failed
   } else {
       // cool we succeeded
   }

... would enter the wrong code.

Changing from an enum to a class allows for success()/failed() functions
to replace the above code so that when we do extend the failure states
such statements are executed.

   if (state.failed()) {
       // Oh no failed
   } else {
       // cool we succeeded
   }

Change-Id: I85137aa298d844210bbefc02fe27c809d2e8410a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-16 10:42:05.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-16 11:28:23.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27524/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite_dcp.cc(7421): error C2039: "Fail": is not a member of "cb::rbac::PrivilegeAccess" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27524/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1709/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/include/memcached/rbac/privileges.h b/include/memcached/rbac/privileges.h
index 56945b3..acd0cb8 100644
--- a/include/memcached/rbac/privileges.h
+++ b/include/memcached/rbac/privileges.h
@@ -190,7 +190,7 @@ public:
         Fail
     };
 
-    PrivilegeAccess(Status s) : status(s) {
+    explicit PrivilegeAccess(Status s) : status(s) {
     }
 
     /// @return if the object represents a successful check
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1709/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/rbac/privileges.h:193:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    PrivilegeAccess(Status s) : status(s) {
    ^
    explicit 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/rbac/privileges.h:193:5: note: FIX-IT applied suggested code changes
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/include/memcached/rbac/privileges.h b/include/memcached/rbac/privileges.h
index 56945b3..acd0cb8 100644
--- a/include/memcached/rbac/privileges.h
+++ b/include/memcached/rbac/privileges.h
@@ -190,7 +190,7 @@ public:
         Fail
     };
 
-    PrivilegeAccess(Status s) : status(s) {
+    explicit PrivilegeAccess(Status s) : status(s) {
     }
 
     /// @return if the object represents a successful check
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1709/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23536/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:7421:55:
error: no member named "Fail" in "cb::rbac::PrivilegeAccess"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23536/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2182/ : FAILURE

Compile error at [2020-04-16T10:45:41.972Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:7421:55:
error: no member named "Fail" in "cb::rbac::PrivilegeAccess"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2182/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3123/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3123/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3139/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3139/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3193/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3193/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10989/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10989/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/229/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
